<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:foreground="@drawable/foreground_design"
        android:scaleType="centerCrop"
        android:src="@drawable/bg4"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="-38dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="472dp"
        android:fontFamily="@font/lobster"
        android:text="@string/gafi_resto1"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login1"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />


    <EditText
        android:textColor="@color/white"
        android:id="@+id/editText2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:backgroundTint="#CCCCCC"
        android:drawableLeft="@drawable/baseline_email_24"
        android:drawablePadding="13dp"
        android:hint="@string/EMAIL"
        android:textColorHint="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.621"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintWidth_percent=".8"
        app:layout_goneMarginTop="30dp"/>

    <EditText
        android:textColor="@color/white"
        android:id="@+id/editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="144dp"
        android:backgroundTint="#CCCCCC"
        android:drawableLeft="@drawable/baseline_key_24"
        android:drawablePadding="13dp"
        android:hint="@string/PASSWORD"
        app:layout_goneMarginTop="10dp"
        android:textColorHint="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.621"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintWidth_percent=".8" />

    <Button
        android:onClick="mainActivity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_bg_design"
        android:fontFamily="@font/anton"
        android:padding="14dp"
        android:text="Login"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.621"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        app:layout_constraintVertical_bias="0.7"
        app:layout_constraintWidth_percent=".8" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="Tidak Punya Akun?"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="301dp"
        android:layout_marginEnd="76dp"
        android:layout_marginBottom="16dp"
        android:onClick="register"
        android:text="@string/register1"
        android:textAlignment="center"
        android:textColor="@color/purple_500"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.769"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2" />

</androidx.constraintlayout.widget.ConstraintLayout>